pod-security/disallow-root-user/.chainsaw-test/invalid-no-user-context.yaml
apiVersion: v1
kind: Pod
metadata:
  name: invalid-no-user-context
spec:
  containers:
    - name: app
      image: nginx:1.25
