pod-security/disallow-root-user/.chainsaw-test/invalid-root-user.yaml
apiVersion: v1
kind: Pod
metadata:
  name: invalid-root-user
spec:
  containers:
    - name: app
      image: nginx:1.25
      securityContext:
        runAsUser: 0
