pod-security/disallow-root-user/.chainsaw-test/valid-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: valid-pod
spec:
  containers:
    - name: app
      image: nginx:1.25
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
